--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@ var link = document.getElementById("sn")
 	</header>
 	<nav>
 		<p>Click on the following links to view some projects I've worked on!</p>
-		<a href="file:///C:/Users/GWC/Desktop/JORDANWEBPAGES/bouncing_ball_pictures.html" onmouseover = "functionLink1()" onmouseout = "functionLinkOut1()" id="bb" >Bouncing Ball</a><br/><br/>
-		<a href="file:///C:/Users/GWC/Desktop/JORDANWEBPAGES/scene_pictures.html" onmouseover = "functionLink2()" onmouseout = "functionLinkOut2()" id="sc" >Scene</a><br/><br/>
-		<a href="file:///C:/Users/GWC/Desktop/JORDANWEBPAGES/snow_pictures.html"onmouseover = "functionLink3()" onmouseout = "functionLinkOut3()" id="sn">Snow</a><br/><br/>
+		<a href="bouncing_ball_pictures.html" onmouseover = "functionLink1()" onmouseout = "functionLinkOut1()" id="bb" >Bouncing Ball</a><br/><br/>
+		<a href="scene_pictures.html" onmouseover = "functionLink2()" onmouseout = "functionLinkOut2()" id="sc" >Scene</a><br/><br/>
+		<a href="snow_pictures.html"onmouseover = "functionLink3()" onmouseout = "functionLinkOut3()" id="sn">Snow</a><br/><br/>
 	</nav>
 	<article> <!About the author>
 		<table border=0 width=800px align=center>
@@ -70,7 +70,7 @@ var link = document.getElementById("sn")
 			</td>
 			<td>
 				<div id="image">
-				<img src="aboutme.jpg" width = "300" height = "-300" >
+				<img src="aboutme.JPG" width = "300" height = "-300" >
 				</div>
 			</td>
 			</tr>
