--- a/index.html
+++ b/index.html
@@ -1,127 +1,145 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
 <head>
 <script>
-// If statement...
-if (window.openDatabase){
-//Create the database the parameters are
-//1. the database number
-//2. version number
-//3. a description
-//4. the size of the database (in bytes) 1024 x 1024 = IMB
-	var mydb = openDatabase("clubs_db", "0.1", "Database of Clubs Registered", 1024 * 1024);
 
-	//create the cars table using SQL for the database using a transaction MUST BE IN A TRANSACTION
-	mydb.transaction(function(t) {
-		t.executeSql("CREATE TABLE IF NOT EXISTS clubs (email TEXT PRIMARY KEY ASC, firstname TEXT, lastname TEXT, clubname TEXT, purpose TEXT, category INTEGER"); //creates table
-		//first column is "email": this is an integer, a PK and is in asc order
-		//second column is "firstname": of type "text"
-		//third column is "lastname": of type "text"
-		//fourth column is "clubname": of type "text"
-		//fifth column is "purpose": of type "text"
-		//sixth column is "category": of type integer
-		});
-		}
-		
-else {
-	alert ("WedSQL is not supported by your browser!"); //will run of WebSQL is not supported
-	}
-	
-function addClub(){
-	//check if mydb exists
-	if(mydb){
-		var firstname = document.GetElementById("fname").value; //box itself is id = fname value is whats inside of the box
-		var lastname = document.GetElementById("lname").value; //same as before, box itself is id value is whats typed
-		var email = document.GetElementById("email").value; // email input
-		var clubname = document.GetElementById("cname").value; // club name value input
-		var purpose = document.GetElementById("purpose").value; //club purpose value input
-		var catetgory = document.GetElementsByName("club").value;//category value of checkbox
-		//test to ensure user has entered both make and model
-		if (first !== "" && last !== "" && email !=="" && club !== "" && purpose !== "" && category !== "") {
-			//insert the user entered details into the cars table, note the use of the ? placeholder
-			mydb.transaction(function(t) { //whenever you see the word transaction, it is changing your database
-				t.executeSql("INSERT INTO clubs (email, firstname, lastname, clubname, purpose, category) VALUES (?, ?, ?, ?, ?, ?)", [email, firstname, lastname, clubname, purpose, category ]); // ? for values because question marks allow u to import variables as opposed to strings  
+// If statement...?
+if (window.openDatabase) {
+//Create the database the parameters are 
+//1. the database name 
+//2.version number
+//	3. a description 
+//4. the size of the database (in bytes) 1024 x 1024 = 1MB
+    var mydb = openDatabase("cars_db", "0.1", "A Database of Cars I Like", 1024 * 1024);
+
+    //create the cars table using SQL for the database using a transaction MUST BE IN A TRANSACTION
+    mydb.transaction(function(t) {
+        t.executeSql("CREATE TABLE IF NOT EXISTS cars (id INTEGER PRIMARY KEY ASC, make TEXT, model TEXT)"); //creates table 
+		//first column is "row": this is an integer, a PK, and is in asc order
+		//second column is "make": of type "text"
+		//third column is "model": of type "text"
+    });
+
+
+
+} else {
+    alert("WebSQL is not supported by your browser!"); //will run this is webSQL is not supported by browser
+}
+
+//function to output the list of cars in the database
+
+function updateCarList(transaction, results) {
+    //initialise the listitems variable
+    var listitems = "";
+    //get the car list holder ul
+    var listholder = document.getElementById("carlist");
+
+    //clear cars list ul
+    listholder.innerHTML = "";
+
+    var i;
+    //Iterate through the results
+    for (i = 0; i < results.rows.length; i++) {
+        //Get the current row
+        var row = results.rows.item(i);
+        listholder.innerHTML += "<li>" + row.make + " - " + row.model + " (<a href='javascript:void(0);' onclick='deleteCar(" + row.id + ");'>Delete Car</a>)";
+    }
+
+}
+
+//function to get the list of cars from the database
+
+function outputCars() {
+    //check to ensure the mydb object has been created
+    if (mydb) {
+        //Get all the cars from the database with a select statement, set outputCarList as the callback function for the executeSql command
+        mydb.transaction(function(t) {
+            t.executeSql("SELECT * FROM cars", [], updateCarList);
+        });
+    } else {
+        alert("db not found, your browser does not support web sql!");
+    }
+}
+
+//function to add the car to the database
+function addCar() {
+    //check to ensure the mydb object has been created
+    if (mydb) {
+        //get the values of the make and model text inputs
+        var make = document.getElementById("carmake").value;
+        var model = document.getElementById("carmodel").value;
+
+        //Test to ensure that the user has entered both a make and model
+        if (make !== "" && model !== "") {
+            //Insert the user entered details into the cars table, note the use of the ? placeholder, these will replaced by the data passed in as an array as the second parameter
+            mydb.transaction(function(t) {
+                t.executeSql("INSERT INTO cars (make, model) VALUES (?, ?)", [make, model]);
+                outputCars();
 				//window.open("http://www.w3schools.com");
-			
-			});
-			}
-		else {
-			alert ("You must complete all the fields!");
-		
-		}
-		}
-	else {
-		alert("db not found!");
-		}
-	
-</script>
 
-<title>Create a Club</title>
-</head>
+            });
+        } else {
+            alert("You must enter a make and model!");
+        }
+    } else {
+        alert("db not found, your browser does not support web sql!");
+    }
+}
+
+
+//function to remove a car from the database, passed the row id as it's only parameter
+
+function deleteCar(id) {
+    //check to ensure the mydb object has been created
+    if (mydb) {
+        //Get all the cars from the database with a select statement, set outputCarList as the callback function for the executeSql command
+        mydb.transaction(function(t) {
+            t.executeSql("DELETE FROM cars WHERE id=?", [id], outputCars);
+        });
+    } else {
+        alert("db not found, your browser does not support web sql!");
+    }
+}
+
+outputCars();
+
+</script>
 <style>
 body {
-    background-color: #ff8f7e;
-    display: inline-block;
+    font-family: sans-serif; 
+    padding: 10px;    
+}
+h1 {
+    font-weight: bold;   
+}
+label {
+     font-size: small;   
+}
+#controls {
+    padding-bottom: 5px;
+    border-bottom: 1px solid #000;    
 }
 </style>
+</head>
+
 <body>
-<form action="/" method="get">
-    <label>
-        <h3>First Name</h3>
-    </label>
-    <input type="text"  id = "fname"  required autocomplete="off" required />
-    <label>
-        <h3>Last Name</h3>
-    </label>    
-    <input type="text" id = "lname" required autocomplete="off" required />
-    <label>
-        <h3>Email</h3>
-    </label>    
-    <input type="text" id = "email" required autocomplete="off" required />
-    <label>
-        <h3>Club Name</h3>
-    </label>    
-    <input type="text" id = "cname" required autocomplete="off" required />
-    <label>
-        <h3>Club Purpose</h3>
-    </label>    
-    <input type="text" id = "purpose" required autocomplete="off" required />
-    <label>
-        <h3>Club Category</h3>
-    </label>    
-    <input type="checkbox" id = "1" name="club" value=1 />
-    </label>
-        Service
-    </label>
-    <br>
-    <input type="checkbox" id = "2" name="club" value=2 />
-    <label>
-        Honor Society
-    </label>
-    <br>
-    <input type="checkbox" id="3" name="club" value=3 />
-    <label>
-        Student Government
-    </label>
-    <br>
-    <input type="checkbox" id="4" name="club" value=4 />
-    <label>
-        Academic
-    </label>
-    <br>
-        <input type="checkbox" id="5" name="club" value=5 />
-    </label>
-        Hobby
-    </label>
-    <br>
-    <input type="checkbox" id= "6" name="club" value=6 />
-    <label>
-        Other
-    </label>
-    <!--<input id="othercategory" placeholder="Please enter a category" type="text" />--> <!--dont think well be able to use this-->
-    <br>
-    <br>
-    <input type="button" id = "addclub" onclick = "addClub()" value="Submit"> 
-</form>
+
+<h1>WebSQL Example</h1>
+
+<div id="controls">
+    <p>Add a car to the database</p>
+    <label>Make: </label><input type="text" id="carmake" /><br />
+    <label>Model: </label><input type="text" id="carmodel" /><br />
+    <button type="button" id="addcar" onclick="addCar();">Add Car</button>
+</div>
+<div id="carlistholder">
+    <h3>Your Cars</h3>
+    <ul id="carlist">
+    </ul>
+</div>
+<p><strong>Note: </strong>You can leave this page and when you return the cars you entered will still be here!</p>
+
+
 </body>
+
 </html>
