--- a/index.html
+++ b/index.html
@@ -1,61 +1,64 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
 <head>
 <script>
-// If statement...
-if (window.openDatabase){
-//Create the database the parameters are
-//1. the database number
-//2. version number
-//3. a description
-//4. the size of the database (in bytes) 1024 x 1024 = IMB
-	var mydb = openDatabase("clubs_db", "0.1", "Database of Clubs Registered", 1024 * 1024);
 
-	//create the cars table using SQL for the database using a transaction MUST BE IN A TRANSACTION
-	mydb.transaction(function(t) {
-		t.executeSql("CREATE TABLE IF NOT EXISTS clubs (email TEXT PRIMARY KEY ASC, firstname TEXT, lastname TEXT, clubname TEXT, purpose TEXT");//, category INTEGER; //creates table
+// If statement...?
+if (window.openDatabase) {
+//Create the database the parameters are 
+//1. the database name 
+//2.version number
+//	3. a description 
+//4. the size of the database (in bytes) 1024 x 1024 = 1MB
+    var mydb = openDatabase("clubs_db", "0.1", "Database of Clubs Registered", 1024 * 1024);
+
+    //create the clubs table using SQL for the database using a transaction MUST BE IN A TRANSACTION
+    mydb.transaction(function(t) {
+        t.executeSql("CREATE TABLE IF NOT EXISTS clubs (email TEXT PRIMARY KEY, firstname TEXT, lastname TEXT, clubname TEXT, purpose TEXT)"); //creates table 
 		//first column is "email": this is an integer, a PK and is in asc order
 		//second column is "firstname": of type "text"
 		//third column is "lastname": of type "text"
 		//fourth column is "clubname": of type "text"
 		//fifth column is "purpose": of type "text"
-		//sixth column is "category": of type integer
-		});
-		}
-		
-else {
-	alert ("WedSQL is not supported by your browser!"); //will run of WebSQL is not supported
-	}
-	
-function addClub(){
-	//check if mydb exists
-	if(mydb){
-		var firstname = document.GetElementById("fname").value; //box itself is id = fname value is whats inside of the box
+    });
+
+} else {
+    alert("WebSQL is not supported by your browser!"); //will run this is webSQL is not supported by browser
+}
+
+
+
+//function to add the club to the database
+function addClub() {
+    //check to ensure the mydb object has been created
+    if (mydb) {
+        //get the values of the name, email, club, purpose text inputs
+        var firstname = document.GetElementById("fname").value; //box itself is id = fname value is whats inside of the box
 		var lastname = document.GetElementById("lname").value; //same as before, box itself is id value is whats typed
 		var email = document.GetElementById("email").value; // email input
 		var clubname = document.GetElementById("cname").value; // club name value input
-		var purpose = document.GetElementById("purpose").value; //club purpose value input
-		var catetgory = document.GetElementsByName("club").value;//category value of checkbox
-		//test to ensure user has entered both make and model
-		if (first !== "" && last !== "" && email !=="" && club !== "" && purpose !== "" && category !== "") {
-			//insert the user entered details into the cars table, note the use of the ? placeholder
-			mydb.transaction(function(t) { //whenever you see the word transaction, it is changing your database
-				t.executeSql("INSERT INTO clubs (email, firstname, lastname, clubname, purpose) VALUES (?, ?, ?, ?, ?)", [email, firstname, lastname, clubname, purpose]); // ? for values because question marks allow u to import variables as opposed to strings  
+		var purpose = document.GetElementById("purpose").value; 
+
+        //Test to ensure that the user has entered all fields
+        if (firstname !== "" && lastname !== "" && email !=="" && clubname !== "" && purpose !== "") {
+            //Insert the user entered details into the clubs table, note the use of the ? placeholder, these will replaced by the data passed in as an array as the second parameter
+            mydb.transaction(function(t) {
+				t.executeSql("INSERT INTO clubs (email, firstname, lastname, clubname, purpose) VALUES (?, ?, ?, ?, ?)", [email, firstname, lastname, clubname, purpose]); 
 				//window.open("http://www.w3schools.com");
-			
-			});
-			}
-		else {
-			alert ("You must complete all the fields!");
-		
-		}
-		
-	else {
-		alert("db not found!");
-		}
-		}
-		}
-	
+
+            });
+        } else {
+            alert("You must fill in all fields!");
+        }
+    } else {
+        alert("db not found, your browser does not support web sql!");
+    }
+}
+
+
+//function to remove a car from the database, passed the row id as it's only parameter
+
+
 </script>
 
 <title>Create a Club</title>
@@ -120,7 +123,6 @@ body {
     <label>
         Other
     </label>
-    <!--<input id="othercategory" placeholder="Please enter a category" type="text" />--> <!--dont think well be able to use this-->
     <br>
     <br>
     <input type="button" id = "addclub" onclick = "addClub()" value="Submit"> 
