--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@ body {
 }
 </style>
 <body>
+<form action="/" method="get">
     <label>
         <h3>First Name</h3>
     </label>
@@ -125,5 +126,6 @@ body {
     <br>
     <br>
     <input type="button" id = "addclub" onclick = "addClub()" value="Submit"> 
+</form>
 </body>
 </html>
