--- a/index.html
+++ b/index.html
@@ -125,7 +125,14 @@ body {
     </label>
     <br>
     <br>
+     <label>
+        <h3>Image</h3>
+    </label>
+    <input accept="file_extension|audio/*|video/*|image/*|media_type">
+    <br>
+    <br>
     <input type="button" id = "addclub" onclick = "addClub()" value="Submit"> 
+
 </form>
 </body>
 </html>
