--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 <script>
-
 // If statement...?
 if (window.openDatabase) {
 //Create the database the parameters are 
@@ -11,23 +10,18 @@ if (window.openDatabase) {
 //	3. a description 
 //4. the size of the database (in bytes) 1024 x 1024 = 1MB
     var mydb = openDatabase("clubs_db", "0.1", "Database of Clubs Registered", 1024 * 1024);
-
     //create the clubs table using SQL for the database using a transaction MUST BE IN A TRANSACTION
     mydb.transaction(function(t) {
-        t.executeSql("CREATE TABLE IF NOT EXISTS clubs (email TEXT PRIMARY KEY, firstname TEXT, lastname TEXT, clubname TEXT, purpose TEXT)"); //creates table 
+        t.executeSql("CREATE TABLE IF NOT EXISTS clubs (email TEXT PRIMARY KEY, firstname TEXT, lastname TEXT, clubname TEXT, purpose TEXT, category INTEGER)"); //creates table 
 		//first column is "email": this is an integer, a PK and is in asc order
 		//second column is "firstname": of type "text"
 		//third column is "lastname": of type "text"
 		//fourth column is "clubname": of type "text"
 		//fifth column is "purpose": of type "text"
     });
-
 } else {
     alert("WebSQL is not supported by your browser!"); //will run this is webSQL is not supported by browser
 }
-
-
-
 //function to add the club to the database
 function addClub() {
     //check to ensure the mydb object has been created
@@ -38,14 +32,13 @@ function addClub() {
 		var email = document.getElementById("email").value; // email input
 		var clubname = document.getElementById("cname").value; // club name value input
 		var purpose = document.getElementById("purpose").value; 
-
+		var category = document.getElementsByClassName("category").value; //gets value of the category
         //Test to ensure that the user has entered all fields
         if (firstname !== "" && lastname !== "" && email !=="" && clubname !== "" && purpose !== "") {
             //Insert the user entered details into the clubs table, note the use of the ? placeholder, these will replaced by the data passed in as an array as the second parameter
             mydb.transaction(function(t) {
-				t.executeSql("INSERT INTO clubs (email, firstname, lastname, clubname, purpose) VALUES (?, ?, ?, ?, ?)", [email, firstname, lastname, clubname, purpose]); 
+				t.executeSql("INSERT INTO clubs (email, firstname, lastname, clubname, purpose, category) VALUES (?, ?, ?, ?, ?, ?)", [email, firstname, lastname, clubname, purpose, category]); 
 				//window.open("http://www.w3schools.com");
-
             });
         } else {
             alert("You must fill in all fields!");
@@ -54,11 +47,7 @@ function addClub() {
         alert("db not found, your browser does not support web sql!");
     }
 }
-
-
 //function to remove a car from the database, passed the row id as it's only parameter
-
-
 </script>
 
 <title>Create a Club</title>
@@ -94,32 +83,32 @@ body {
     <label>
         <h3>Club Category</h3>
     </label>    
-    <input type="checkbox" id = "1" name="club" value=1 />
+    <input type="checkbox" id = "1" class="category" value=1 />
     </label>
         Service
     </label>
     <br>
-    <input type="checkbox" id = "2" name="club" value=2 />
+    <input type="checkbox" id = "2" class="club" value=2 />
     <label>
         Honor Society
     </label>
     <br>
-    <input type="checkbox" id="3" name="club" value=3 />
+    <input type="checkbox" id="3" class="category" value=3 />
     <label>
         Student Government
     </label>
     <br>
-    <input type="checkbox" id="4" name="club" value=4 />
+    <input type="checkbox" id="4" class="category" value=4 />
     <label>
         Academic
     </label>
     <br>
-        <input type="checkbox" id="5" name="club" value=5 />
+        <input type="checkbox" id="5" class="category" value=5 />
     </label>
         Hobby
     </label>
     <br>
-    <input type="checkbox" id= "6" name="club" value=6 />
+    <input type="checkbox" id= "6" class="category" value=6 />
     <label>
         Other
     </label>
