--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ if (window.openDatabase) {
     var mydb = openDatabase("clubs_db", "0.1", "Database of Clubs Registered", 1024 * 1024);
     //create the clubs table using SQL for the database using a transaction MUST BE IN A TRANSACTION
     mydb.transaction(function(t) {
-        t.executeSql("CREATE TABLE IF NOT EXISTS clubs (email TEXT PRIMARY KEY, firstname TEXT, lastname TEXT, clubname TEXT, purpose TEXT, category INTEGER)"); //creates table 
+        t.executeSql("CREATE TABLE IF NOT EXISTS clubs (email TEXT PRIMARY KEY, firstname TEXT, lastname TEXT, clubname TEXT, purpose TEXT, service INTEGER, honorsociety INTEGER, studentgov INTEGER, academic INTEGER, hobby INTEGER, other INTEGER )"); //creates table 
 		//first column is "email": this is an integer, a PK and is in asc order
 		//second column is "firstname": of type "text"
 		//third column is "lastname": of type "text"
@@ -32,12 +32,17 @@ function addClub() {
 		var email = document.getElementById("email").value; // email input
 		var clubname = document.getElementById("cname").value; // club name value input
 		var purpose = document.getElementById("purpose").value; 
-		var category = document.getElementsByClassName("category").value; //gets value of the category
+		var service = document.getElementById("1").value; //gets value of the category
+		var honorsociety = document.getElementById("2").value;
+		var studentgov = document.getElementById("3").value;
+		var academic = document.getElementById("4").value;
+		var hobby = document.getElementById("5").value;
+		var other = document.getElementById("6").value;
         //Test to ensure that the user has entered all fields
-        if (firstname !== "" && lastname !== "" && email !=="" && clubname !== "" && purpose !== "" && category !=="") {
+        if (firstname !== "" && lastname !== "" && email !=="" && clubname !== "" && purpose !== "") {
             //Insert the user entered details into the clubs table, note the use of the ? placeholder, these will replaced by the data passed in as an array as the second parameter
             mydb.transaction(function(t) {
-				t.executeSql("INSERT INTO clubs (email, firstname, lastname, clubname, purpose, category) VALUES (?, ?, ?, ?, ?, ?)", [email, firstname, lastname, clubname, purpose, category]); 
+				t.executeSql("INSERT INTO clubs (email, firstname, lastname, clubname, purpose, serice, honorsociety, studentgov, academic, hobby, other) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)", [email, firstname, lastname, clubname, purpose, serice, honorsociety, studentgov, academic, hobby, other]); 
 				//window.open("http://www.w3schools.com");
             });
         } else {
@@ -88,27 +93,27 @@ body {
         Service
     </label>
     <br>
-    <input type="checkbox" id = "2" class="club" value=2 />
+    <input type="checkbox" id = "2" class="club" value=1 />
     <label>
         Honor Society
     </label>
     <br>
-    <input type="checkbox" id="3" class="category" value=3 />
+    <input type="checkbox" id="3" class="category" value=1 />
     <label>
         Student Government
     </label>
     <br>
-    <input type="checkbox" id="4" class="category" value=4 />
+    <input type="checkbox" id="4" class="category" value=1 />
     <label>
         Academic
     </label>
     <br>
-        <input type="checkbox" id="5" class="category" value=5 />
+        <input type="checkbox" id="5" class="category" value=1 />
     </label>
         Hobby
     </label>
     <br>
-    <input type="checkbox" id= "6" class="category" value=6 />
+    <input type="checkbox" id= "6" class="category" value=1 />
     <label>
         Other
     </label>
