--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ if (window.openDatabase) {
     var mydb = openDatabase("clubs_db", "0.1", "Database of Clubs Registered", 1024 * 1024);
     //create the clubs table using SQL for the database using a transaction MUST BE IN A TRANSACTION
     mydb.transaction(function(t) {
-        t.executeSql("CREATE TABLE IF NOT EXISTS clubs (email TEXT PRIMARY KEY, firstname TEXT, lastname TEXT, clubname TEXT, purpose TEXT, category TEXT)"); //creates table 
+        t.executeSql("CREATE TABLE IF NOT EXISTS club (email TEXT PRIMARY KEY, firstname TEXT, lastname TEXT, clubname TEXT, purpose TEXT, category TEXT)"); //creates table 
 		//first column is "email": this is an integer, a PK and is in asc order
 		//second column is "firstname": of type "text"
 		//third column is "lastname": of type "text"
@@ -37,7 +37,7 @@ function addClub() {
         if (firstname !== "" && lastname !== "" && email !=="" && clubname !== "" && purpose !== "" && category !=="") {
             //Insert the user entered details into the clubs table, note the use of the ? placeholder, these will replaced by the data passed in as an array as the second parameter
             mydb.transaction(function(t) {
-				t.executeSql("INSERT INTO clubs (email, firstname, lastname, clubname, purpose, category) VALUES (?, ?, ?, ?, ?, ?)", [email, firstname, lastname, clubname, purpose, category]); 
+				t.executeSql("INSERT INTO club (email, firstname, lastname, clubname, purpose, category) VALUES (?, ?, ?, ?, ?, ?)", [email, firstname, lastname, clubname, purpose, category]); 
 				//window.open("http://www.w3schools.com");
             });
         } else {
