--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ function addClub() {
 		var email = document.getElementById("email").value; // email input
 		var clubname = document.getElementById("cname").value; // club name value input
 		var purpose = document.getElementById("purpose").value; 
-		var category = document.getElementsByClassName("category").value; //gets value of the category
+		var category = document.getElementById("category").value; //gets value of the category
         //Test to ensure that the user has entered all fields
         if (firstname !== "" && lastname !== "" && email !=="" && clubname !== "" && purpose !== "") {
             //Insert the user entered details into the clubs table, note the use of the ? placeholder, these will replaced by the data passed in as an array as the second parameter
@@ -82,7 +82,16 @@ body {
     <input type="text" id = "purpose" required autocomplete="off" required />
     <label>
         <h3>Club Category</h3>
-    </label>    
+    </label>
+    <select id="category">
+  <option value=1>Service Club</option>
+  <option value=2>Honor Society</option>
+  <option value=3>Student Government</option>
+  <option value=4>Academic</option>
+   <option value=5>Hobby</option>
+  <option value=6>Other</option>
+</select>
+    <!--
     <input type="checkbox" id = "1" class="category" value=1 />
     </label>
         Service
@@ -111,7 +120,7 @@ body {
     <input type="checkbox" id= "6" class="category" value=6 />
     <label>
         Other
-    </label>
+    </label> -->
     <br>
     <br>
      <label>
