--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ body {
      <label>
         <h3>Image</h3>
     </label>
-    <input accept="file_extension|audio/*|video/*|image/*|media_type">
+    <input type="file" name="pic" multiple accept="image/gif, image/jpeg" />
     <br>
     <br>
     <input type="button" id = "addclub" onclick = "addClub()" value="Submit"> 
