--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ function addUser() {
     }
 }
 </script>
-<link rel="stylesheet" type="text/css" href="myStyles.css">
+<link rel="stylesheet" type="text/css" href="mystyles.css">
 
 </head>
 <body>
