--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ function addUser() {
             <br>
             <input type="button" id = "adduser" class="button button-block" onclick = "addUser()" value="Get Started">
             
-            Already have an account? <a href="CoverPage.html">Log in.</a></li>
+            Already have an account? <a href="testdatafinal.html">Log in.</a></li>
             </form>
         </div>
     </div><!-- tab-content -->
